--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/fabricate.adligo.org"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tests4j_4jacoco.adligo.org"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tests4j_4mockito.adligo.org"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tests4j_tests.adligo.org"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tests4j.adligo.org"/>
+	<classpathentry kind="var" path="SERVER_REPO/org/apache/commons/commons-logging/1.2/commons-logging-1.2.jar"/>
+	<classpathentry kind="var" path="SERVER_REPO/org/apache/commons/httpcore/4.3.2/httpcore-4.3.2.jar"/>
+	<classpathentry kind="var" path="SERVER_REPO/org/apache/commons/httpclient/4.3.5/httpclient-4.3.5.jar"/>
+	<classpathentry kind="var" path="SERVER_REPO/org/mockito/mockito-all/1.10.8/mockito-all-1.10.8.jar"/>
+	<classpathentry kind="var" path="SERVER_REPO/org/ow2/asm/asm-debug-all/5.0.3/asm-debug-all-5.0.3.jar" sourcepath="/ASM_SRC"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/fabricate4eclipse.adligo.org"/>
+	<classpathentry kind="output" path="classes_e"/>
 </classpath>
